# TbaEngine

./: .clang-format  .gitattributes  CMakeLists.txt  LICENSE.txt  README.md  conanfile.py  generate-conan-profiles.py  generate-conan-profiles.sh
src/: CMakeLists.txt
src/AppEvent/: CMakeLists.txt
src/AppEvent/AppEvent/: CMakeLists.txt
src/AppEvent/AppEvent/include/AppEvent/: AppEventMgr.h  EventInfo.hpp  LogCategory.h  NativeEvent.h  NativeEventListener.h  NativeEventListenerId.h  NativeEventListeners.h  NativeEventListenersGuard.h  (+1 more)
src/AppEvent/AppEvent/src/: AppEvent.cpp  AppEventMgr.cpp  EventInfo.cpp  EventQueue.cpp  NativeEvent.cpp  NativeEventListener.cpp  NativeEventListenerId.cpp  NativeEventListeners.cpp  NativeEventListenersGuard.cpp  WindowEvent.cpp  WindowEventKind.cpp
src/AppEvent/Impl/Sdl/: CMakeLists.txt
src/AppEvent/include/AppEvent/: AppEvent.h  AppEventMgr.h  EventInfo.h  EventQueue.h  SdlAppEventMgr.h  WindowEvent.h  WindowEventDetails.h
src/AppEvent/src/: AppEventMgr.cpp  LogCategory.cpp  SdlAppEventMgr.cpp  WindowEventDetails.cpp
src/Common/: CMakeLists.txt
src/Common/include/Common/: FlagEnum.h  FlagEnum.hpp  Integers.h  Memory.h  NumericCast.hpp  OverloadMultiplexor.h  RaiiWrapper.h  String.h
src/Common/src/: FlagEnum.cpp  Integers.cpp  Memory.cpp  NumericCast.cpp  OverloadMultiplexor.cpp  RaiiWrapper.cpp  String.cpp
src/Common/src/Stl/: Array.cpp  Expected.cpp  HashMap.cpp  Optional.cpp  Queue.cpp  Vector.cpp
src/Event/: CMakeLists.txt
src/Event/AppEvent/: CMakeLists.txt
src/Event/AppEvent/src/: AppEvent.cpp
src/Event/EventInfo/: CMakeLists.txt
src/Event/EventInfo/src/: EventInfo.cpp
src/Event/EventSys/: CMakeLists.txt
src/Event/EventSys/src/: EventMgr.cpp  EventQueue.cpp  LogCategory.cpp  NativeEvent.cpp  NativeEventListener.cpp  NativeEventListenerId.cpp  NativeEventListeners.cpp  NativeEventProvider.cpp
src/Event/Impl/: CMakeLists.txt
src/Event/Impl/Sdl/: CMakeLists.txt
src/Framework/: CMakeLists.txt
src/Framework/Framework/: CMakeLists.txt
src/Framework/Framework/src/: Application.cpp  Framework.cpp  RenderableApplication.cpp
src/Framework/Impl/Sdl/: CMakeLists.txt
src/Framework/include/Framework/: Application.h  Clock.h  EventLoopApplication.h  Framework.h  RefreshRateLimiter.h  RefreshRateOptions.h  RenderableApplication.h  SdlFramework.h
src/Framework/src/: Application.cpp  Clock.cpp  EventLoopApplication.cpp  Framework.cpp  RefreshRateLimiter.cpp  RefreshRateOptions.cpp  RenderableApplication.cpp  SdlFramework.cpp
src/GuiTest/: CMakeLists.txt  GuiTest.cpp  GuiTest.h  main.cpp
src/Input/: CMakeLists.txt
src/Input/Impl/Sdl/: CMakeLists.txt
src/Input/Input/: CMakeLists.txt
src/Input/Input/src/: Device.cpp  DeviceInfo.cpp  DeviceMgr.cpp  DeviceType.cpp  KeyMods.cpp  KeyScancode.cpp  Keyboard.cpp  KeyboardState.cpp  LogCategory.cpp  Mouse.cpp  MouseState.cpp
src/Input/Input/test/: CMakeLists.txt
src/Input/InputEvent/: CMakeLists.txt
src/Input/InputEvent/src/: KeyboardEvent.cpp  KeyboardEventDetails.cpp  KeyboardEventKind.cpp  MouseEvent.cpp  MouseEventDetails.cpp  MouseEventKind.cpp
src/Input/Keyboard/: CMakeLists.txt
src/Input/Keyboard/src/: KeyCode.cpp  KeyMods.cpp  KeyScancode.cpp
src/Input/Mouse/: CMakeLists.txt
src/Input/Mouse/src/: CursorPosition.cpp  MouseButton.cpp
src/Input/include/Input/: Device.h  DeviceMgr.h  DeviceType.h  KeyCode.h  KeyMods.h  KeyboardState.h
src/Input/src/: DeviceMgr.cpp  KeyCode.cpp  Keyboard.cpp  KeyboardState.cpp
src/Logger/: CMakeLists.txt
src/Logger/include/Logger/: BasicLogging.h  CategorizedLogging.h  LogCategoryConcept.h  LogCategoryRegistry.h  LogCategoryRegistry.hpp  LogMessageLevel.h  Logging.h
src/Logger/src/: BasicLogging.cpp  CategorizedLogging.cpp  LogCategoryConcept.cpp  LogCategoryRegistry.cpp  LogMessageLevel.cpp  Logging.cpp
src/Logger/test/: CMakeLists.txt
src/Logger/test/src/: LogCategoryTest.cpp  LogTest.cpp  TestLogCategory.cpp  TestLogCategory.h  main.cpp
src/Render/: CMakeLists.txt
src/Render/Content/: CMakeLists.txt
src/Render/Content/src/: Color.cpp  Content.cpp
src/Render/Geometry2d/: CMakeLists.txt
src/Render/Geometry2d/src/: ContentTraits.cpp  Line.cpp  Point2d.cpp  ScreenCoordinate.cpp  Triangle.cpp
src/Render/Impl/: CMakeLists.txt
src/Render/Impl/OpenGl/: CMakeLists.txt
src/Render/Impl/Sdl/: CMakeLists.txt
src/Render/Render2d/: CMakeLists.txt
src/Render/Render2d/src/: GeometryBatch.cpp  GeometryBatchModifier.cpp  PrimitiveId.cpp  RenderableGeometry.cpp  Renderer.cpp  SdlRenderer.cpp
src/Render/Render2d/test/: CMakeLists.txt
src/Render/RenderScene/: CMakeLists.txt
src/Render/RenderScene/src/: GeometryChunk2d.cpp  RenderScene.cpp  RenderableBlueprint.cpp  TracedGeometryBatchModifier2d.cpp
src/Render/Renderer/: CMakeLists.txt
src/Render/Renderer/src/: Renderer.cpp  RendererType.cpp  SdlRenderer.cpp
src/Render/RendererContext/: CMakeLists.txt
src/Render/RendererContext/src/: RendererContext.cpp  RendererContextCreator.cpp  RendererContextRaii.cpp  RendererPreconfigOptions.cpp  RendererType.cpp
src/Render/RendererInfo/: CMakeLists.txt
src/Render/RendererInfo/src/: RendererType.cpp
src/Render/RendererType/: CMakeLists.txt
src/Render/RendererType/src/: RendererType.cpp
src/Render/Texture/: CMakeLists.txt
src/Render/Texture/src/: TextureCreator.cpp
src/Render/TextureLoader/src/: TextureLoader.cpp  stb_image.h
src/Render/TextureStorage/src/: TextureStorage.cpp
src/Render/Textures/: CMakeLists.txt
src/Render/Textures/Texture/: CMakeLists.txt
src/Render/Textures/TextureLoader/: CMakeLists.txt
src/Render/Textures/TextureStorage/: CMakeLists.txt
src/Winsys/: CMakeLists.txt
src/Winsys/Impl/Sdl/: CMakeLists.txt
src/Winsys/WinEvent/: CMakeLists.txt
src/Winsys/WinEvent/src/: WindowEvent.cpp  WindowEventDetails.cpp  WindowEventKind.cpp
src/Winsys/Winsys/: CMakeLists.txt
src/Winsys/Winsys/src/: Window.cpp  WindowMgr.cpp  WindowOptions.cpp
src/Winsys/include/Winsys/: SdlWindowMgr.h  Window.h
src/Winsys/src/: SdlWindow.cpp  SdlWindowMgr.cpp  Window.cpp
(+290 files in other folders)
